added some effects to the imgs

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <h2 class = row-title>Discover Movies</h2>
 
                 <button id = 'test-btn' class = "btn">Left</button>
-                <button id = 'test-btn2' class ="btn">Right</button>
+                <button id = 'test-btn2' class ="btn2">Right</button>
 
                 <ul id = "row-content" class = "row-content">
                     
