added info on click

--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
                 <ul id = "row-content" class = "row-content">
                     
                 </ul>
+
+                <div id = 'info' class = 'info' style = 'display: none;'>
+
+                </div>
                 
             </div>
 
